--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,25 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.1</version>
+		</dependency>
+
+		<!--
+		dom4j解析xml需要的引入的依赖 @see http://outofmemory.cn/code-snippet/1806/java-lang-NoClassDefFoundError-org-jaxen-JaxenException-resolve-method
+		-->
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
