--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,12 +1,12 @@
 ##druid数据库连接池配置##
 # MySql数据库连接信息
-datasource.druid.url=jdbc:mysql://localhost:3306/ssm?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+datasource.druid.url=jdbc:mysql://localhost:3306/spring-transaction?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 # 根据url自动识别 这一项可配可不配,
 # 如果不配置druid会根据url自动识别dbType,
 # 然后选择相应的driverClassName(建议配置下)
 datasource.druid.drvierClassName=com.mysql.cj.jdbc.Driver
 datasource.druid.userName=root
-datasource.druid.password=MaryF6650
+datasource.druid.password=123456
 
 # 初始化时建立物理连接的个数
 # 初始化发生在显示调用init方法,或者第一次getConnection时
